[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# To update these dependencies to newer verions, edit the version here and then run 'cargo update'
# To see documentation on all the dependencies, use cargo doc --open
[dependencies]
rand = "0.8.3"
